--- a/index.html
+++ b/index.html
@@ -1,90 +1,63 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <title>Scbzyhx.github.io</title>
-  <meta name="description" content="">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
+<head >
+<meta http-equiv="Content-Type" content="text/html;charset=gb2312">
+Books about programming
+<style type="text/css"> body {font-family:sans-serif;font-weight:bold}</style>
 </head>
-
 <body>
+<!--<input id = "first id"/>-->
+<dir>
+	<li>Advanced Data Structure</li>
+	<dir>
+		<li><a href=http://assets.cambridge.org/97805218/80374/toc/9780521880374_toc.pdf>目录</a></li>
+	</dir>
+</dir>
+<dir>
+	<li>The Alogorithm Design Manual</li>
+</dir>
+	
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Scbzyhx.github.io</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/scbzyhx" class="code">View Scbzyhx.github.io on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<dir>
+	<li>算法引论</li>
+	<dir>
+		<a href = http://baike.baidu.com/view/3068953.htm?fr=aladdin>click here</a>
+	</dir>
+</dir>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we鈥檒l help you sort it out.</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-
-      <p><a href="https://github.com/scbzyhx" class="avatar"><img src="https://avatars3.githubusercontent.com/u/3282283?v=2&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/scbzyhx">scbzyhx</a> on <a href="https://www.github.com">GitHub</a></p>
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/scbzyhx/scbzyhx.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/scbzyhx/scbzyhx.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
+<dir>
+	<li>编程珠玑</li>
+	<dir>
+	<a href =http://baike.baidu.com/view/1726287.htm?fr=aladdin>click here</a>
+	</dir>
+</dir>
+<dir>
+	<li>The Practice of Programming</li>
+	<dir>
+	<a href =http://book.douban.com/subject/1826292/>click here</a>
+	</dir>
+</dir>
+<dir>
+	<li>C Interfaces and Implementations</li>
+	<dir>
+	<a href =http://book.douban.com/subject/1459281/>click here</a>
+	</dir>
+</dir>
+<div style="background-color:#00FFFF"><!--color:#00FF00;-->
+<dir>
+	<li>Design Pattern</li>
+	<dir>
+	<li>Strategy Pattern</li>
+	<p>将变化的部分封装起来，不变的部分与变化的部分分开。</p>
+	<p>Has_One is much better than is_One</p>
+	<li>Observer Pattern</li>
+	<li>Decorator Pattern</li>
+	<p>定义：动态地将责任附加到对象上，若扩展功能，装饰者提供比继承更有弹性的替代方案</p>
+	<p>开放-关闭设计原则，类应该对扩展开放，对修改关闭。</p>
+	</dir>
+</dir>
+</div>
 </body>
 </html>
