--- a/archives.html
+++ b/archives.html
@@ -14,7 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">YANG </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="/category/.html"></a></li>
+                    <li><a href="/category/ce-shi.html">测试</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -22,7 +22,7 @@
 
 <dl>
     <dt>周二 12 五月 2015</dt>
-    <dd><a href="/.html"></a></dd>
+    <dd><a href="/.html">测试</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
