--- a/authors.html
+++ b/authors.html
@@ -14,13 +14,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">YANG </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="/category/.html"></a></li>
+                    <li><a href="/category/ce-shi.html">测试</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on YANG</h1>
     <ul>
+        <li><a href="/author/yang-hai-xiang.html">杨海祥</a> (1)</li>
     </ul>
 </section>
 
