--- a/tags.html
+++ b/tags.html
@@ -71,7 +71,7 @@
         <h2 id="Test-ref" class="tag-title">Test</h2>
         <ul class="articles-in-tag">
  
-            <li><a href="/.html">测试  </a></li>
+            <li><a href="/test.html">测试  </a></li>
         </ul>
 
     </div>
