first blog, awk translation

--- a/test.html
+++ b/test.html
@@ -64,6 +64,8 @@
             <hr/>
             <nav>
             <ul class="articles_timeline">
+ 
+                <li class="next_article"><a href="/awk-trans.html" title="Next: awk 教程">awk 教程</a> »</li>
             </ul>
             </nav>
             </aside>
