--- a/tags.html
+++ b/tags.html
@@ -60,6 +60,9 @@
         </form>
         <ul class="list-of-tags">
             <li>
+            <a href="/tags.html#翻译，awk-ref">翻译，awk<span>1</span></a>
+            </li>
+            <li>
             <a href="/tags.html#Test-ref">Test<span>1</span></a>
             </li>
         </ul>
@@ -68,6 +71,12 @@
 
 <div class="row-fluid">
     <div class="span8 offset2">
+        <h2 id="翻译，awk-ref" class="tag-title">翻译，awk</h2>
+        <ul class="articles-in-tag">
+ 
+            <li><a href="/awk-trans.html">awk 教程  </a></li>
+        </ul>
+
         <h2 id="Test-ref" class="tag-title">Test</h2>
         <ul class="articles-in-tag">
  
