change href in awk-trnas

--- a/awk-trans.html
+++ b/awk-trans.html
@@ -60,8 +60,8 @@
 
             <h1>AWK 教程</h1>
 <p>该教程是为极客学院翻译的项目。</p>
-<p>翻译教程地址：https://github.com/scbzyhx/awk 或者 https://github.com/wenquan0hf/awk  </p>
-<p>官方英文原版：http://www.tutorialspoint.com/awk/awk_overview.htm</p>
+<p>翻译教程地址：<a href = "https://github.com/scbzyhx/awk">https://github.com/scbzyhx/awk</a> 或者  <a href = "https://github.com/wenquan0hf/awk ">https://github.com/wenquan0hf/awk </a></p>
+<p>官方英文原版：<a href = "http://www.tutorialspoint.com/awk/awk_overview.htm">http://www.tutorialspoint.com/awk/awk_overview.htm </a></p>
             <aside>
             <hr/>
             <nav>
