real first blog

--- a/authors.html
+++ b/authors.html
@@ -49,9 +49,6 @@ YANG            </a>
                         <li >
                             <a href="http://scbzyhx.github.io/category/fan-yi.html">翻译</a>
                         </li>
-                        <li >
-                            <a href="http://scbzyhx.github.io/category/test.html">Test</a>
-                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="http://scbzyhx.github.io/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
@@ -67,7 +64,7 @@ YANG            </a>
         <div class="col-sm-9">
 
     <h1>Authors on YANG</h1>
-        <li><a href="http://scbzyhx.github.io/author/yang-hai-xiang.html">杨海祥</a> (2)</li>
+        <li><a href="http://scbzyhx.github.io/author/yang-hai-xiang.html">杨海祥</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -86,13 +83,13 @@ YANG            </a>
             <li class="list-group-item"><a href="http://scbzyhx.github.io/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/fan-yi-awk.html">
-                            翻译，awk
+                        <a href="http://scbzyhx.github.io/tag/awk.html">
+                            awk
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/test.html">
-                            Test
+                        <a href="http://scbzyhx.github.io/tag/fan-yi.html">
+                            翻译
                         </a>
                     </li>
                 </ul>
