--- a/awk-trans.html
+++ b/awk-trans.html
@@ -2,7 +2,7 @@
 <html lang="zh"
 >
 <head>
-    <title>awk 教程 - YANG</title>
+    <title>AWK 教程 - YANG</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -13,17 +13,18 @@
 <link rel="canonical" href="http://scbzyhx.github.io/awk-trans.html">
 
         <meta name="author" content="杨海祥" />
-        <meta name="keywords" content="翻译，awk" />
+        <meta name="keywords" content="翻译,awk" />
         <meta name="description" content="AWK 教程 该教程是为极客学院翻译的项目。 翻译教程地址：https://github.com/scbzyhx/awk 或者 https://github.com/wenquan0hf/awk 官方英文原版：http://www.tutorialspoint.com/awk/awk_overview.htm" />
 
         <meta property="og:site_name" content="YANG" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="awk 教程"/>
+        <meta property="og:title" content="AWK 教程"/>
         <meta property="og:url" content="http://scbzyhx.github.io/awk-trans.html"/>
         <meta property="og:description" content="AWK 教程 该教程是为极客学院翻译的项目。 翻译教程地址：https://github.com/scbzyhx/awk 或者 https://github.com/wenquan0hf/awk 官方英文原版：http://www.tutorialspoint.com/awk/awk_overview.htm"/>
         <meta property="article:published_time" content="2015-05-13" />
             <meta property="article:section" content="翻译" />
-            <meta property="article:tag" content="翻译，awk" />
+            <meta property="article:tag" content="翻译" />
+            <meta property="article:tag" content="awk" />
             <meta property="article:author" content="杨海祥" />
 
 
@@ -55,9 +56,6 @@ YANG            </a>
                         <li class="active">
                             <a href="http://scbzyhx.github.io/category/fan-yi.html">翻译</a>
                         </li>
-                        <li >
-                            <a href="http://scbzyhx.github.io/category/test.html">Test</a>
-                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="http://scbzyhx.github.io/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
@@ -78,8 +76,8 @@ YANG            </a>
                 <h1>
                     <a href="http://scbzyhx.github.io/awk-trans.html"
                        rel="bookmark"
-                       title="Permalink to awk 教程">
-                        awk 教程
+                       title="Permalink to AWK 教程">
+                        AWK 教程
                     </a>
                 </h1>
             </header>
@@ -95,7 +93,9 @@ YANG            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="http://scbzyhx.github.io/tag/fan-yi-awk.html">翻译，awk</a>
+	<a href="http://scbzyhx.github.io/tag/fan-yi.html">翻译</a>
+        /
+	<a href="http://scbzyhx.github.io/tag/awk.html">awk</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -156,13 +156,13 @@ YANG            </a>
             <li class="list-group-item"><a href="http://scbzyhx.github.io/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/fan-yi-awk.html">
-                            翻译，awk
+                        <a href="http://scbzyhx.github.io/tag/awk.html">
+                            awk
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/test.html">
-                            Test
+                        <a href="http://scbzyhx.github.io/tag/fan-yi.html">
+                            翻译
                         </a>
                     </li>
                 </ul>
