--- a/authors.html
+++ b/authors.html
@@ -64,7 +64,7 @@ YANG            </a>
         <div class="col-sm-9">
 
     <h1>Authors on YANG</h1>
-        <li><a href="http://scbzyhx.github.io/author/yang-hai-xiang.html">杨海祥</a> (1)</li>
+        <li><a href="http://scbzyhx.github.io/author/yang-hai-xiang.html">杨海祥</a> (2)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -82,14 +82,19 @@ YANG            </a>
 
             <li class="list-group-item"><a href="http://scbzyhx.github.io/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
-                    <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/awk.html">
-                            awk
+                    <li class="list-group-item tag-1">
+                        <a href="http://scbzyhx.github.io/tag/fan-yi.html">
+                            翻译
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/fan-yi.html">
-                            翻译
+                        <a href="http://scbzyhx.github.io/tag/lua.html">
+                            Lua
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-4">
+                        <a href="http://scbzyhx.github.io/tag/awk.html">
+                            awk
                         </a>
                     </li>
                 </ul>
