--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@ YANG            </a>
         <div class="col-sm-9">
 
             <article>
+                <h2><a href="http://scbzyhx.github.io/lua-trans.html">AWK 教程</a></h2>
+                <div class="summary"><h1>Lua 教程</h1>
+<h2>概述</h2>
+<p>Lua 是用 C 语言开发的可扩展的轻量级编程语言。它起源于 1993 年由 Roberto lerusalimschy,Luiz Henrique de Figueiredo 与 Waddemar Celes 领导的一个内部项目。
+设计者的初衷是希望 Lua 可以成为一款整合 C 语言代码以及其它传统语言代码的软件。这种整合会带来很多好处，它让你不需要重复做 C 语言已经做的很好的工作，而专注于提供那些 C 语言不擅长的特性：提供更高的抽象（离硬件更远）、动态结构、无冗余、易于测试与调试。为了提供这些特性，Lua 提供了安全的环境、动态内存管理，以及擅长处理字符串和其它动态大小数据结构的工具。</p>
+<h2>特点</h2>
+<p>Lua 有着许多自身的特点使得它与其它编程语言不同。主要包括：<br />
+<ul>
+<li>可扩展性</li><br />
+<li>简单</li><br />
+<li>高效</li><br />
+<li>跨平台 ...</li></ul></p>
+                    <a class="btn btn-default btn-xs" href="http://scbzyhx.github.io/lua-trans.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
                 <h2><a href="http://scbzyhx.github.io/awk-trans.html">AWK 教程</a></h2>
                 <div class="summary"><h1>AWK 教程</h1>
 <p>该教程是为极客学院翻译的项目。</p>
@@ -91,14 +108,19 @@ YANG            </a>
 
             <li class="list-group-item"><a href="http://scbzyhx.github.io/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
-                    <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/awk.html">
-                            awk
+                    <li class="list-group-item tag-1">
+                        <a href="http://scbzyhx.github.io/tag/fan-yi.html">
+                            翻译
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/fan-yi.html">
-                            翻译
+                        <a href="http://scbzyhx.github.io/tag/lua.html">
+                            Lua
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-4">
+                        <a href="http://scbzyhx.github.io/tag/awk.html">
+                            awk
                         </a>
                     </li>
                 </ul>
