--- a/lua-trans.html
+++ b/lua-trans.html
@@ -2,7 +2,7 @@
 <html lang="zh"
 >
 <head>
-    <title>AWK 教程 - YANG</title>
+    <title>Lua 教程 - YANG</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -18,7 +18,7 @@
 
         <meta property="og:site_name" content="YANG" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="AWK 教程"/>
+        <meta property="og:title" content="Lua 教程"/>
         <meta property="og:url" content="http://scbzyhx.github.io/lua-trans.html"/>
         <meta property="og:description" content="Lua 教程 概述 Lua 是用 C 语言开发的可扩展的轻量级编程语言。它起源于 1993 年由 Roberto lerusalimschy,Luiz Henrique de Figueiredo 与 Waddemar Celes 领导的一个内部项目。 设计者的初衷是希望 Lua 可以成为一款整合 C 语言代码以及其它传统语言代码的软件。这种整合会带来很多好处，它让你不需要重复做 C 语言已经做的很好的工作，而专注于提供那些 C 语言不擅长的特性：提供更高的抽象（离硬件更远）、动态结构、无冗余、易于测试与调试。为了提供这些特性，Lua 提供了安全的环境、动态内存管理，以及擅长处理字符串和其它动态大小数据结构的工具。 特点 Lua 有着许多自身的特点使得它与其它编程语言不同。主要包括： 可扩展性 简单 高效 跨平台 ..."/>
         <meta property="article:published_time" content="2015-05-27" />
@@ -76,8 +76,8 @@ YANG            </a>
                 <h1>
                     <a href="http://scbzyhx.github.io/lua-trans.html"
                        rel="bookmark"
-                       title="Permalink to AWK 教程">
-                        AWK 教程
+                       title="Permalink to Lua 教程">
+                        Lua 教程
                     </a>
                 </h1>
             </header>
@@ -180,13 +180,13 @@ YANG            </a>
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/lua.html">
-                            Lua
+                        <a href="http://scbzyhx.github.io/tag/awk.html">
+                            awk
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/awk.html">
-                            awk
+                        <a href="http://scbzyhx.github.io/tag/lua.html">
+                            Lua
                         </a>
                     </li>
                 </ul>
