--- a/authors.html
+++ b/authors.html
@@ -49,6 +49,9 @@ YANG            </a>
                         <li >
                             <a href="http://scbzyhx.github.io/category/fan-yi.html">翻译</a>
                         </li>
+                        <li >
+                            <a href="http://scbzyhx.github.io/category/ri-zhi.html">日志</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="http://scbzyhx.github.io/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
@@ -64,7 +67,7 @@ YANG            </a>
         <div class="col-sm-9">
 
     <h1>Authors on YANG</h1>
-        <li><a href="http://scbzyhx.github.io/author/yang-hai-xiang.html">杨海祥</a> (2)</li>
+        <li><a href="http://scbzyhx.github.io/author/yang-hai-xiang.html">杨海祥</a> (3)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -88,13 +91,18 @@ YANG            </a>
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/awk.html">
-                            awk
+                        <a href="http://scbzyhx.github.io/tag/lua.html">
+                            Lua
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://scbzyhx.github.io/tag/lua.html">
-                            Lua
+                        <a href="http://scbzyhx.github.io/tag/c.html">
+                            C++，
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-4">
+                        <a href="http://scbzyhx.github.io/tag/awk.html">
+                            awk
                         </a>
                     </li>
                 </ul>
