--- a/authors.html
+++ b/authors.html
@@ -65,12 +65,13 @@
         <ul>
                 <li><a href="http://scbzyhx.github.io/tag/.html"></a></li>
                 <li><a href="http://scbzyhx.github.io/tag/c.html">C++，</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/nfv.html">nfv</a></li>
+                <li><a href="http://scbzyhx.github.io/tag/lua.html">Lua</a></li>
                 <li><a href="http://scbzyhx.github.io/tag/openflow.html">OpenFlow</a></li>
                 <li><a href="http://scbzyhx.github.io/tag/fan-yi.html">翻译</a></li>
                 <li><a href="http://scbzyhx.github.io/tag/ant.html">Ant</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/lua.html">Lua</a></li>
+                <li><a href="http://scbzyhx.github.io/tag/nfv.html">nfv</a></li>
                 <li><a href="http://scbzyhx.github.io/tag/awk.html">awk</a></li>
+                <li><a href="http://scbzyhx.github.io/tag/ecmascript.html">ECMAScript</a></li>
                 <li><a href="http://scbzyhx.github.io/tag/sdn.html">SDN</a></li>
                 <li><a href="http://scbzyhx.github.io/tag/ryu.html">Ryu</a></li>
         </ul>
@@ -83,7 +84,7 @@
   	
     <h1>Authors on YANG</h1>
 
-    <ul>        <li><a href="http://scbzyhx.github.io/author/yang-hai-xiang.html">杨海祥</a> (6)</li>
+    <ul>        <li><a href="http://scbzyhx.github.io/author/yang-hai-xiang.html">杨海祥</a> (7)</li>
     </ul>
   
   </div><!-- end #mainContent -->
