change theme to Just-Read

--- a/tags.html
+++ b/tags.html
@@ -1,113 +1,77 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<!doctype html>
+<html lang="">	
 <head>
-
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  
-  <title>YANG</title>
-<link href="http://scbzyhx.github.io/theme/css/style.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="http://scbzyhx.github.io/" type="application/atom+xml" rel="alternate" title="YANG ATOM Feed" />
-  
-  <!--[if IE]>
-  <style type="text/css"> 
-  .twoColFixRtHdr #mainContent { zoom: 1; }
-  </style>
-  <![endif]-->
-
+	<meta charset="utf-8"/>
+	<title>YANG</title>	
+	<meta name="author" content="scbzyhx">
+	
+	<meta name="HandheldFriendly" content="True">
+	<meta name="MobileOptimized" content="320">
+	<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0">
+	
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:700,400|Droid+Sans+Mono' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="http://scbzyhx.github.io/theme/css/main.css" type="text/css" />
+		
+	<!--[if lt IE 9]>
+		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	
+	
+	<link href="http://scbzyhx.github.io/" type="application/atom+xml" rel="alternate" title="YANG ATOM Feed" />
 </head>
-
-<body>
-
-<div id="container">
-
-  <div id="header">
-  <h1><a href="http://scbzyhx.github.io">YANG</h1>
-  
-  </div><!-- end #header -->
-  
-  <div id="topMenu">
-  
-    <ul>
-    	<li><a href="http://scbzyhx.github.io">Home</a></li>
-        <li>&ndash;</li>
-        <li><a href="http://scbzyhx.github.io/archives.html">Archives</a></li>
-        
-    </ul>
-  
-  </div><!-- end #topMenu -->
-
-  <div id="sidebar">
-	<h3>Pages</h3>
-	<ul>
+	
+<body>		
+	<header class="clearfix" role="banner">
+		<div class="wrapper">
+			<h1 class="huge"><a href="http://scbzyhx.github.io">YANG</a></h1>
+		</div>
+	</header>
+	
+<div role="main" class="content clearfix">
+<div class="wrapper main">  	
+	<h2>Tags</h2>
+	
+	<ul class="tag">
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/.html"></a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/awk.html">awk</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/openflow.html">OpenFlow</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/ryu.html">Ryu</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/c.html">C++，</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/sdn.html">SDN</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/ecmascript.html">ECMAScript</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/nfv.html">nfv</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/lua.html">Lua</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/ant.html">Ant</a></li>
+        <li class="tag-1"><a href="http://scbzyhx.github.io/tag/fan-yi.html">翻译</a></li>
 	</ul>
-    <h3>Categories</h3>
-    <ul>
-		 <li ><a href="http://scbzyhx.github.io/category/fan-yi.html">翻译</a></li>
-		 <li ><a href="http://scbzyhx.github.io/category/ri-zhi.html">日志</a></li>
-	</ul>
-	<li>
-		<h3>Blogroll</h3>
-		<ul>
-                    <li><a href="http://github.com/">Github</a></li>
-		</ul>
-	</li>
-        <li>
-                <h3>Social</h3>
-                <ul>
-                    <li><a href="http://scbzyhx.github.io/" rel="alternate">Flux Atom</a></li>
-                    <li><a href="http://weibo.com/u/3445058592/">weibo</a></li>
-                    <li><a href="http://github.com/scbzyhx">Github</a></li>
-                </ul>
-        </li><!-- /.social -->
-<li>
-        <h3>Tags</h3>
-        <ul>
-                <li><a href="http://scbzyhx.github.io/tag/.html"></a></li>
-                <li><a href="http://scbzyhx.github.io/tag/c.html">C++，</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/lua.html">Lua</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/openflow.html">OpenFlow</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/fan-yi.html">翻译</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/ant.html">Ant</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/nfv.html">nfv</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/awk.html">awk</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/ecmascript.html">ECMAScript</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/sdn.html">SDN</a></li>
-                <li><a href="http://scbzyhx.github.io/tag/ryu.html">Ryu</a></li>
-        </ul>
-</li>
-    
-  
-  </div><!-- end #sidebar -->
 
-  <div id="mainContent">
-  	
-<div class="blogItem">
-<ul>
-    <li></li>
-    <li>C++，</li>
-    <li>Lua</li>
-    <li>OpenFlow</li>
-    <li>翻译</li>
-    <li>Ant</li>
-    <li>nfv</li>
-    <li>awk</li>
-    <li>ECMAScript</li>
-    <li>SDN</li>
-    <li>Ryu</li>
-</ul>
 </div>
-  
-  </div><!-- end #mainContent -->
-
-<div class="clearfloat"></div>
-
-  <div id="footer">
-  
-    <p><a href="http://css4free.com/" title="free CSS web site designs">Free CSS Gallery</a></p>
-    <p>Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>, which takes great advantages of <a href="http://python.org">python</a>.
-  </div><!-- end #footer -->
-
-</div><!-- end #container -->
+</div>
+	
+		
+<footer class="clearfix">
+	<div class="wrapper pages">
+		<ul class="nav">
+			<li><a href="http://scbzyhx.github.io/archives.html">Archive</a></li>
+		</ul>
+	</div>
+	
+	<div class="copy wrapper">
+		<ul class="social">
+			<li><a href="http://weibo.com/u/3445058592/">weibo</a></li>
+			<li><a href="http://github.com/scbzyhx">Github</a></li>
+		</ul>
+	
+		<p role="contentinfo">© 2012 scbzyhx<br>
+		Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">Pelican</a>.</p>
+	</div>
+</footer>
+	
+	<script>
+	  var _gaq=[['_setAccount',''],['_trackPageview']];
+	  (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+	  g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+	  s.parentNode.insertBefore(g,s)}(document,'script'));
+	</script>
 </body>
 </html>
