--- a/tags.html
+++ b/tags.html
@@ -32,16 +32,17 @@
 	<h2>Tags</h2>
 	
 	<ul class="tag">
-        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/.html"></a></li>
-        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/awk.html">awk</a></li>
-        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/openflow.html">OpenFlow</a></li>
         <li class="tag-4"><a href="http://scbzyhx.github.io/tag/ryu.html">Ryu</a></li>
-        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/c.html">C++，</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/ant.html">Ant</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/awk.html">awk</a></li>
         <li class="tag-4"><a href="http://scbzyhx.github.io/tag/sdn.html">SDN</a></li>
         <li class="tag-4"><a href="http://scbzyhx.github.io/tag/ecmascript.html">ECMAScript</a></li>
         <li class="tag-4"><a href="http://scbzyhx.github.io/tag/nfv.html">nfv</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/.html"></a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/c.html">C++，</a></li>
         <li class="tag-4"><a href="http://scbzyhx.github.io/tag/lua.html">Lua</a></li>
-        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/ant.html">Ant</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/ri-zhi.html">日志</a></li>
+        <li class="tag-4"><a href="http://scbzyhx.github.io/tag/openflow.html">OpenFlow</a></li>
         <li class="tag-1"><a href="http://scbzyhx.github.io/tag/fan-yi.html">翻译</a></li>
 	</ul>
 
